--- a/src/main/resources/static/views/products.html
+++ b/src/main/resources/static/views/products.html
@@ -1,4 +1,15 @@
 <div class="section">
     <h3>{{headingTitle}}</h3>
-    <h3>{{product.nom}}</h3>
+
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>id</th>
+        </tr>
+
+        <tr ng-repeat = "product in products">
+            <td>{{ product.nom }}</td>
+            <td><a href="#/product/{{ product.id }}">{{ product.id }}</a></td>
+        </tr>
+    </table>
 </div>
