--- a/src/main/resources/static/views/products.html
+++ b/src/main/resources/static/views/products.html
@@ -8,7 +8,7 @@
             <th>TAG</th>
         </tr>
 
-        <tr ng-repeat = "product in products.data">
+        <tr ng-repeat = "product in products">
             <td><a href="#/product/{{ product.id }}">{{ product.id }}</a></td>
             <td>{{ product.nom }}</td>
             <td>{{product.tag}}</td>
